@@ -1,5 +1,8 @@
 <?php
 
+error_reporting(E_ALL|E_STRICT);
+if(!ini_get('date.timezone'))
+	date_default_timezone_set('CET');
 define('DWOO_CACHE_DIRECTORY', dirname(__FILE__).DIRECTORY_SEPARATOR.'temp'.DIRECTORY_SEPARATOR.'cache');
 define('DWOO_COMPILE_DIRECTORY', dirname(__FILE__).DIRECTORY_SEPARATOR.'temp'.DIRECTORY_SEPARATOR.'compiled');
 require dirname(dirname(__FILE__)).DIRECTORY_SEPARATOR.'Dwoo.php';
